Add background image and title to index page

--- a/views/layout.html
+++ b/views/layout.html
@@ -8,10 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
-    <title>Python Terminal by Code Institute</title>
+    <title>Your Life in Numbers</title>
     <style>
         body {
             font-family: Arial;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: url(assets/images/matrix-356024_1920_s.webp) no-repeat center center/cover;
         }
 
         /**
