Correct the background link

--- a/views/layout.html
+++ b/views/layout.html
@@ -13,9 +13,11 @@
         body {
             font-family: Arial;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: url(assets/images/matrix-356024_1920_s.webp) no-repeat center center/cover;
+            background: url('https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/images/matrix-356024_1920_s.webp') no-repeat center center/cover;
+            height: 100 vh;
         }
 
         /**
