--- a/views/layout.html
+++ b/views/layout.html
@@ -16,7 +16,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: url('https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/images/matrix-356024_1920_s.webp') no-repeat center center/cover;
+            background: url('https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/images/numbers_gerd_altmann_pixabay_937884.webp') no-repeat center center/cover;
             height: 100 vh;
         }
 
@@ -91,6 +91,7 @@
             bottom: 0;
             background-color: rgb(0, 0, 0);
             width: 730px;
+            border: 1px solid #ffffff;
         }
 
         .xterm .xterm-screen {
