Add meta description

--- a/views/layout.html
+++ b/views/layout.html
@@ -8,6 +8,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
+    <meta
+      name="description"
+      content="Your Life in Numbers is a web application, where you learn some facts based on details about your life."
+    />
+    <meta
+      name="keywords"
+      content="life, numbers, dog years, celestial age, facts, bmi, rmr"
+    />
+    <meta name="author" content="Dajana Isbaner" />
     <title>Your Life in Numbers</title>
     <style>
         body {
@@ -166,7 +175,7 @@
             width: 200px;
             height: 40px;
             background-color: #E84610;
-            border: 1px solid grey;
+            border: 1px solid white;
             color: white;
             text-transform: uppercase;
             margin: 10px;
