Add red border to button

--- a/views/layout.html
+++ b/views/layout.html
@@ -173,8 +173,9 @@
 
         button {
             width: 200px;
-            height: 41px;
+            height: 40px;
             background-color: #E84610;
+            border: 1px solid #CC0100;
             color: white;
             text-transform: uppercase;
             margin: 10px;
