Change border color to orange

--- a/views/layout.html
+++ b/views/layout.html
@@ -175,7 +175,7 @@
             width: 200px;
             height: 40px;
             background-color: #E84610;
-            border: 1px solid #CC0100;
+            border: 1px solid #E84610;
             color: white;
             text-transform: uppercase;
             margin: 10px;
