--- a/views/layout.html
+++ b/views/layout.html
@@ -17,6 +17,12 @@
       content="life, numbers, dog years, celestial age, facts, bmi, rmr"
     />
     <meta name="author" content="Dajana Isbaner" />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    
     <title>Your Life in Numbers</title>
     <style>
         body {
@@ -175,7 +181,7 @@
             width: 200px;
             height: 40px;
             background-color: #E84610;
-            border: 1px solid #E84610;
+            border: 1px solid lightgray; 
             color: white;
             text-transform: uppercase;
             margin: 10px;
