--- a/views/layout.html
+++ b/views/layout.html
@@ -18,11 +18,11 @@
     />
     <meta name="author" content="Dajana Isbaner" />
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon/site.webmanifest">
-    
+    <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/site.webmanifest">
+
     <title>Your Life in Numbers</title>
     <style>
         body {
