--- a/views/layout.html
+++ b/views/layout.html
@@ -106,7 +106,8 @@
             bottom: 0;
             background-color: rgb(0, 0, 0);
             width: 730px;
-            border: 1px solid #ffffff;
+            border: 5px solid #000000;
+            border-radius: 4px;
         }
 
         .xterm .xterm-screen {
