Try border to id terminal

--- a/views/layout.html
+++ b/views/layout.html
@@ -35,6 +35,11 @@
             height: 100 vh;
         }
 
+        .terminal {
+            border: 5px solid #000000;
+            border-radius: 4px;
+        }
+
         /**
         * Default styles for xterm.js
         */
