--- a/views/layout.html
+++ b/views/layout.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
@@ -18,183 +17,200 @@
     />
     <meta name="author" content="Dajana Isbaner" />
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/favicon/site.webmanifest"
+    />
 
     <title>Your Life in Numbers</title>
     <style>
-        body {
-            font-family: Arial;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: url('https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/images/numbers_gerd_altmann_pixabay_937884.webp') no-repeat center center/cover;
-            height: 100 vh;
-        }
+      body {
+        font-family: Arial;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: url("https://raw.githubusercontent.com/queenisabaer/life-in-numbers/main/assets/images/numbers_gerd_altmann_pixabay_937884.webp")
+          no-repeat center center/cover;
+        height: 100vh;
+      }
 
-        .terminal {
-            border: 5px solid #000000;
-            border-radius: 4px;
-        }
+      .terminal {
+        border: 5px solid #000000;
+        border-radius: 4px;
+      }
 
-        /**
+      /**
         * Default styles for xterm.js
         */
 
-        .xterm {
-            font-feature-settings: "liga"0;
-            position: relative;
-            user-select: none;
-            -ms-user-select: none;
-            -webkit-user-select: none;
-        }
+      .xterm {
+        font-feature-settings: "liga" 0;
+        position: relative;
+        user-select: none;
+        -ms-user-select: none;
+        -webkit-user-select: none;
+      }
 
-        .xterm.focus,
-        .xterm:focus {
-            outline: none;
-        }
+      .xterm.focus,
+      .xterm:focus {
+        outline: none;
+      }
 
-        .xterm .xterm-helpers {
-            position: absolute;
-            top: 0;
-            /**
+      .xterm .xterm-helpers {
+        position: absolute;
+        top: 0;
+        /**
         * The z-index of the helpers must be higher than the canvases in order for
         * IMEs to appear on top.
         */
-            z-index: 5;
-        }
+        z-index: 5;
+      }
 
-        .xterm .xterm-helper-textarea {
-            padding: 0;
-            border: 0;
-            margin: 0;
-            /* Move textarea out of the screen to the far left, so that the cursor is not visible */
-            position: absolute;
-            opacity: 0;
-            left: -9999em;
-            top: 0;
-            width: 0;
-            height: 0;
-            z-index: -5;
-            /** Prevent wrapping so the IME appears against the textarea at the correct position */
-            white-space: nowrap;
-            overflow: hidden;
-            resize: none;
-        }
+      .xterm .xterm-helper-textarea {
+        padding: 0;
+        border: 0;
+        margin: 0;
+        /* Move textarea out of the screen to the far left, so that the cursor is not visible */
+        position: absolute;
+        opacity: 0;
+        left: -9999em;
+        top: 0;
+        width: 0;
+        height: 0;
+        z-index: -5;
+        /** Prevent wrapping so the IME appears against the textarea at the correct position */
+        white-space: nowrap;
+        overflow: hidden;
+        resize: none;
+      }
 
-        .xterm .composition-view {
-            /* TODO: Composition position got messed up somewhere */
-            background: #000;
-            color: #FFF;
-            display: none;
-            position: absolute;
-            white-space: nowrap;
-            z-index: 1;
-        }
+      .xterm .composition-view {
+        /* TODO: Composition position got messed up somewhere */
+        background: #000;
+        color: #fff;
+        display: none;
+        position: absolute;
+        white-space: nowrap;
+        z-index: 1;
+      }
 
-        .xterm .composition-view.active {
-            display: block;
-        }
+      .xterm .composition-view.active {
+        display: block;
+      }
 
-        .xterm .xterm-viewport {
-            /* On OS X this is required in order for the scroll bar to appear fully opaque */
-            background-color: #000;
-            overflow-y: scroll;
-            cursor: default;
-            position: absolute;
-            right: 0;
-            left: 0;
-            top: 0;
-            bottom: 0;
-            background-color: rgb(0, 0, 0);
-            width: 730px;
-            border: 1px solid #ffffff;
-        }
+      .xterm .xterm-viewport {
+        /* On OS X this is required in order for the scroll bar to appear fully opaque */
+        background-color: #000;
+        overflow-y: scroll;
+        cursor: default;
+        position: absolute;
+        right: 0;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        background-color: rgb(0, 0, 0);
+        width: 730px;
+        border: 1px solid #ffffff;
+      }
 
-        .xterm .xterm-screen {
-            position: relative;
-        }
+      .xterm .xterm-screen {
+        position: relative;
+      }
 
-        .xterm .xterm-screen canvas {
-            position: absolute;
-            left: 0;
-            top: 0;
-        }
+      .xterm .xterm-screen canvas {
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
 
-        .xterm .xterm-scroll-area {
-            visibility: hidden;
-        }
+      .xterm .xterm-scroll-area {
+        visibility: hidden;
+      }
 
-        .xterm-char-measure-element {
-            display: inline-block;
-            visibility: hidden;
-            position: absolute;
-            top: 0;
-            left: -9999em;
-            line-height: normal;
-        }
+      .xterm-char-measure-element {
+        display: inline-block;
+        visibility: hidden;
+        position: absolute;
+        top: 0;
+        left: -9999em;
+        line-height: normal;
+      }
 
-        .xterm {
-            cursor: text;
-        }
+      .xterm {
+        cursor: text;
+      }
 
-        .xterm.enable-mouse-events {
-            /* When mouse events are enabled (eg. tmux), revert to the standard pointer cursor */
-            cursor: default;
-        }
+      .xterm.enable-mouse-events {
+        /* When mouse events are enabled (eg. tmux), revert to the standard pointer cursor */
+        cursor: default;
+      }
 
-        .xterm.xterm-cursor-pointer {
-            cursor: pointer;
-        }
+      .xterm.xterm-cursor-pointer {
+        cursor: pointer;
+      }
 
-        .xterm.column-select.focus {
-            /* Column selection mode */
-            cursor: crosshair;
-        }
+      .xterm.column-select.focus {
+        /* Column selection mode */
+        cursor: crosshair;
+      }
 
-        .xterm .xterm-accessibility,
-        .xterm .xterm-message {
-            position: absolute;
-            left: 0;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            z-index: 10;
-            color: transparent;
-        }
+      .xterm .xterm-accessibility,
+      .xterm .xterm-message {
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 10;
+        color: transparent;
+      }
 
-        .xterm .live-region {
-            position: absolute;
-            left: -9999px;
-            width: 1px;
-            height: 1px;
-            overflow: hidden;
-        }
+      .xterm .live-region {
+        position: absolute;
+        left: -9999px;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+      }
 
-        .xterm-dim {
-            opacity: 0.5;
-        }
+      .xterm-dim {
+        opacity: 0.5;
+      }
 
-        .xterm-underline {
-            text-decoration: underline;
-        }
+      .xterm-underline {
+        text-decoration: underline;
+      }
 
-        button {
-            width: 200px;
-            height: 40px;
-            background-color: #E84610;
-            border: 1px solid lightgray; 
-            color: white;
-            text-transform: uppercase;
-            margin: 10px;
-            border-radius: 8px;
-        }
+      button {
+        width: 200px;
+        height: 40px;
+        background-color: #e84610;
+        border: 1px solid lightgray;
+        color: white;
+        text-transform: uppercase;
+        margin: 10px;
+        border-radius: 8px;
+      }
     </style>
-</head>
+  </head>
 
-@{body}
-
+  @{body}
 </html>
